--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,123 @@
-numpy~=1.26.1
-bentoml~=1.1.8
-pydantic~=2.4.2
-requests~=2.31.0
-matplotlib~=3.8.1
-tensorflow~=2.14.0
-redis~=5.0.1
+absl-py==2.0.0
+aiohttp==3.8.6
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
+appdirs==1.4.4
+asgiref==3.7.2
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.1.0
+autopep8==2.0.4
+bentoml==1.1.9
+build==1.0.3
+cachetools==5.3.2
+cattrs==23.1.2
+certifi==2023.7.22
+charset-normalizer==3.3.1
+circus==0.18.0
+click==8.1.7
+click-option-group==0.5.6
+cloudpickle==3.0.0
+confluent-kafka==2.2.0
+contextlib2==21.6.0
+contourpy==1.1.1
+cycler==0.12.1
+decorator==5.1.1
+deepmerge==1.1.0
+Deprecated==1.2.14
+fastapi==0.104.0
+flatbuffers==23.5.26
+fonttools==4.43.1
+frozenlist==1.4.0
+fs==2.4.16
+gast==0.5.4
+google-auth==2.23.4
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+greenlet==3.0.0
+grpcio==1.59.2
+h11==0.14.0
+h5py==3.10.0
+httpcore==1.0.1
+httptools==0.6.1
+httpx==0.25.1
+idna==3.4
+importlib-metadata==6.8.0
+inflection==0.5.1
+Jinja2==3.1.2
+keras==2.14.0
+kiwisolver==1.4.5
+libclang==16.0.6
+lxml==4.9.3
+Markdown==3.5.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.1
+mdurl==0.1.2
+ml-dtypes==0.2.0
+multidict==6.0.4
+numpy==1.26.1
+nvidia-ml-py==11.525.150
+oauthlib==3.2.2
+obspy==1.4.0
+opentelemetry-api==1.20.0
+opentelemetry-instrumentation==0.41b0
+opentelemetry-instrumentation-aiohttp-client==0.41b0
+opentelemetry-instrumentation-asgi==0.41b0
+opentelemetry-sdk==1.20.0
+opentelemetry-semantic-conventions==0.41b0
+opentelemetry-util-http==0.41b0
+opt-einsum==3.3.0
+packaging==23.2
+pathspec==0.11.2
+Pillow==10.1.0
+pip-requirements-parser==32.0.1
+pip-tools==7.3.0
+prometheus-client==0.18.0
+protobuf==4.25.0
+psutil==5.9.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycodestyle==2.11.1
+pydantic==2.4.2
+pydantic_core==2.10.1
+Pygments==2.16.1
+pyparsing==3.1.1
+pyproject_hooks==1.0.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+python-multipart==0.0.6
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.1
+redis==5.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.6.0
+rsa==4.9
+schema==0.7.5
+scipy==1.11.3
+simple-di==0.1.5
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.22
+starlette==0.27.0
+tensorboard==2.14.1
+tensorboard-data-server==0.7.2
+tensorflow==2.14.0
+tensorflow-estimator==2.14.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.3.0
+tornado==6.3.3
+typing_extensions==4.8.0
+urllib3==2.0.7
+uvicorn==0.23.2
+uvloop==0.18.0
+watchfiles==0.21.0
+websockets==12.0
+Werkzeug==3.0.1
+wrapt==1.14.1
+yarl==1.9.2
+zipp==3.17.0
